I edited my title.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- style css link -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title> 🌸 Esther's Weather App</title>
+    <title>Weather App</title>
 
 
 </head>
