--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
         </div>
         <!-- forecast ends here -->
 
+        <div>
+            <small><a href="https://github.com/Omouwho/weather-app" target="_blank">Open-source code</a>, by Esther
+                Omouwho</small>
+        </div>
     </div>
 
     <!-- javascript link -->
