Made some css changes to accommodate my source code link

--- a/index.html
+++ b/index.html
@@ -161,14 +161,15 @@
 
 
             </div>
+
         </div>
         <!-- forecast ends here -->
-
-        <div>
-            <small><a href="https://github.com/Omouwho/weather-app" target="_blank">Open-source code</a>, by Esther
-                Omouwho</small>
-        </div>
     </div>
+
+    <p class="source-code"><a href="https://github.com/Omouwho/weather-app" target="_blank">Open-sourcecode</a> by
+        Esther Omouwho</p>
+
+
 
     <!-- javascript link -->
     <script src="assets/js/main.js"></script>
