--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-6">
 
-                <div class="clear-fix">
+                <div class="d-flex">
                     <img src="assets/images/sun2.png" alt="cloudy-sun" class="weather-icon1">
                     <span class="temperature" id="temperature">
                     </span>
