updated my css list properties. Made my description in main.js functional. Added Last Updated to my list

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h1 id="city"></h1>
 
         <ul>
-            <li id="list-time"></li>
+            <li class="last">Last updated: <span id="list-time"></span></li>
             <li id="description"></li>
         </ul>
 
