Added my API icon.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="col-6">
 
                 <div class="d-flex">
-                    <img src="assets/images/sun2.png" alt="cloudy-sun" class="weather-icon1">
+                    <img src="" alt="cloudy-sun" class="weather-icon1" id="icon">
                     <span class="temperature" id="temperature">
                     </span>
                     <span class="units" id="change-units">
