--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
         <div class="row">
             <div class="col-6">
 
-                <div class="d-flex">
+                <div class="d-flex weather-temperature">
                     <img src="" alt="cloudy-sun" class="weather-icon1" id="icon">
                     <span class="temperature" id="temperature">
                     </span>
                     <span class="units" id="change-units">
-                        <a href="#" id="celsius-link"> °C </a> | <a href="#" id="fahrenheit-link"> °F </a>
+                        <a href="#" id="celsius-link" class="active"> °C </a> | <a href="#" id="fahrenheit-link"> °F
+                        </a>
                     </span>
                 </div>
 
