commented out the forecast since i don't need it right away.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <hr>
         <!-- Forecast starts here -->
 
-        <div class="weather-forecast">
+        <!-- <div class="weather-forecast">
             <div class="row">
                 <div class="col-sm-2">
                     <div class="forecaster">
@@ -163,7 +163,7 @@
 
             </div>
 
-        </div>
+        </div> -->
         <!-- forecast ends here -->
     </div>
 
