--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <hr>
         <!-- Forecast starts here -->
 
-        <!-- <div class="weather-forecast">
+        <div class="weather-forecast">
             <div class="row">
                 <div class="col-sm-2">
                     <div class="forecaster">
@@ -163,8 +163,8 @@
 
             </div>
 
-        </div> -->
-        <!-- forecast ends here -->
+        </div>
+        <!-- forecast ends here-->
     </div>
 
     <p class="source-code"><a href="https://github.com/Omouwho/weather-app" target="_blank">Open-sourcecode</a> by
