removed the current button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- The form to submit a city starts here -->
         <form class="search-form" id="form">
             <div class="row">
-                <div class="col-6">
+                <div class="col-9">
                     <!-- input search field -->
                     <input type="search" placeholder=" 🔍 Type a city" autofocus="on" autocomplete="off"
                         class="form-control shadow-sm" id="city-input">
@@ -47,11 +47,11 @@
                     <input type="submit" value="Search" class="form-control btn btn-primary shadow-sm">
                 </div>
                 <!-- Current button -->
-                <div class="col-3">
+                <!-- <div class="col-3">
                     <button class="btn btn-success w-100" value="search" type="submit" id="current-location-button">
                         Current
                     </button>
-                </div>
+                </div> -->
             </div>
         </form>
         <!-- End of form to search field -->
@@ -86,8 +86,8 @@
         <!-- Today's temperature ends here -->
 
         <hr>
-        <!-- Forecast starts here -->
 
+        <!-- Forecast starts here -->
         <div class="weather-forecast">
             <div class="row">
                 <div class="col-sm-2">
