removed all the console logs

--- a/index.html
+++ b/index.html
@@ -88,73 +88,10 @@
         <hr>
 
         <!-- Forecast starts here -->
-        <div class="weather-forecast" id="forecast">
+        <div class="weather-forecast" id="forecast"></div>
+        <!-- forecast ends here-->
 
 
-            <div class="col-sm-2">
-                <div class="forecaster">
-                    <div class="weather-forecast-date">Tue</div>
-                    <img src="assets/images/sun2.png" alt="weather icon" class="weather-icon">
-                    <div class="forecaster-temp">
-                        <span class="max-temp">35°</span>
-                        <span class="min-temp">23°</span>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-sm-2">
-                <div class="forecaster">
-                    <div class="weather-forecast-date">Wed</div>
-                    <img src="assets/images/cloudss.png" alt="weather icon" class="weather-icon">
-                    <div class="forecaster-temp">
-                        <span class="max-temp">29°</span>
-                        <span class="min-temp">26°</span>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-sm-2">
-                <div class="forecaster">
-                    <div class="weather-forecast-date">Thu</div>
-                    <img src="assets/images/rainy-sunnyy.png" alt="weather icon" class="weather-icon">
-                    <div class="forecaster-temp">
-                        <span class="max-temp">25°</span>
-                        <span class="min-temp">19°</span>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-sm-2">
-                <div class="forecaster">
-                    <div class="weather-forecast-date">Fri</div>
-                    <img src="assets/images/rainy-sunnyy.png" alt="weather icon" class="weather-icon">
-                    <div class="forecaster-temp">
-                        <span class="max-temp">20°</span>
-                        <span class="min-temp">26°</span>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-sm-2">
-                <div class="forecaster">
-                    <div class="weather-forecast-date">Sat</div>
-                    <img src="assets/images/cloudss.png" alt="weather icon" class="weather-icon">
-                    <div class="forecaster-temp">
-                        <span class="max-temp">29°</span>
-                        <span class="min-temp">26°</span>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-
-    </div>
-    <!-- forecast ends here-->
     </div>
 
     <p class="source-code"><a href="https://github.com/Omouwho/weather-app" target="_blank">Open-sourcecode</a> by
