--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 </div>
                 <!-- Search Button -->
                 <div class="col-4">
-                    <input type="submit" value="Search" class="form-control btn btn-primary shadow-sm" />
+                    <input type="submit" value="Search" class="form-control btn btn-primary shadow-sm"
+                        id="search-btn" />
                 </div>
             </div>
         </form>
